Fix for purple gem overlapping header links making them unclickable

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -69,7 +69,7 @@
 
 .gem-bg__container {
   position: relative;
-  top: 0;
+  top: 1.5rem;
   right: 0;
   z-index: 0;
   height: 0;
